# aoc2023

./: CMakeLists.txt  LICENSE  README.md
include/: bench.hpp  day1.hpp  file.hpp
src/: bench.cpp  day1.cpp  file.cpp  main.cpp
